<resources>
    <string name="app_name">Taxi Unico</string>
    <string name="descLogo">imgLogo</string>
    <string name="logo">TAXI UNICO</string>
    <string name="ingresa">Ingresa a tu cuenta</string>

    <string name="calificacion">Calificación: %.2f</string>
    <string name="fecha_encuesta">Fecha: %1$s</string>
    <string name="cost">MX $%.2f</string>

    <string name="distance">%.2f km</string>
    <string name="hours">%.1f horas</string>


    <string name="name">Nombre</string>
    <string name="name_hint">Ingresa tu nombre de usuario</string>
    <string name="email">Correo electronico</string>
    <string name="email_hint">Ingresa tu correo electronico</string>
    <string name="phone">Teléfono</string>
    <string name="phone_hint">Ingresa tu numero telefónico</string>
    <string name="pass">Contraseña</string>
    <string name="pass_hint">Ingresa tu contraseña</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="aun_no_tienes_cuenta">¿Aun no tienes cuenta?</string>
    <string name="registrate">Registrate</string>
    <string name="crea_cuenta">Crea una cuenta</string>
    <string name="registrarse">Registrarse</string>
    <string name="ya_tienes_cuenta">¿Ya tienes cuenta?</string>
    <string name="inicia_sesion">Inicia sesión</string>
    <string name="card_template">•••• •••• •••• %d</string>

    <string name="card_details">Detalle de la tarjeta</string>
    <string name="add_card">AÑADIR TARJETA</string>
    <string name="cvc">CVC</string>
    <string name="country">País</string>
    <string name="search">Buscar</string>
    <string name="insert_code">Insertar código</string>

    <string name="order_trip">Ordenar Viaje</string>
    <string name="monterrey_trip">Tu viaje en Monterrey</string>
    <string name="to_terminal">Hacia la terminal</string>
    <string name="to_house">Hacia domicilio</string>
    <string name="pick_house">Elegir domicilio</string>
    <string name="continuar">Continuar</string>
    <string name="aviso_retraso">*Para evitar retrasos en tu viaje, nuestro socio conductor pasará por ti 1 hora antes
        del viaje. Considera esto para planear tus actividades.
    </string>

    <string name="confirmation">Confirmación de Viaje</string>
    <string name="card_number">Número de tarjeta</string>
    <string name="exp_date">Fecha de expiración</string>
    <string name="cash">Pago en efectivo</string>
    <string name="textview">Textview</string>

    <string name="viaje_terminado">¡Ha llegado a su destino!</string>
    <string name="total">Total:</string>
    <string name="hora_llegada">Hora de llegada:</string>
    <string name="califique">¡Califique el servicio!</string>
    <string name="nombre_chofer">Nombre de chofer</string>
    <string name="enviar">Enviar respuesta</string>
    <string name="estrella_1">1</string>
    <string name="estrella_2">2</string>
    <string name="estrella_3">3</string>
    <string name="estrella_4">4</string>
    <string name="estrella_5">5</string>

    <string name="from_to">De %1$s a %2$s</string>
    <string name="central">TransPais %1$s</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="in_progress">Viaje en curso</string>
</resources>
