<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <View
            android:layout_width="346dp"
            android:layout_height="494.52dp"
            android:id="@+id/encuesta" android:background="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:layout_width="288dp"
            android:layout_height="36dp"
            android:id="@+id/mensaje1" android:textStyle="bold"
            android:textAlignment="center" android:textSize="25sp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/encuesta"
            app:layout_constraintStart_toStartOf="@+id/encuesta" app:layout_constraintEnd_toEndOf="@+id/encuesta"
            android:text="@string/viaje_terminado"/>

    <TextView
            android:text="@string/total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mensaje2" android:textStyle="bold"
            android:textAlignment="center" android:textSize="20sp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/mensaje1"
            app:layout_constraintEnd_toEndOf="@+id/encuesta" app:layout_constraintStart_toStartOf="@+id/encuesta"/>
    <TextView
            android:text="@string/total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/total"
            android:textAlignment="center" android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/mensaje2"
            app:layout_constraintStart_toStartOf="@+id/encuesta" app:layout_constraintEnd_toEndOf="@+id/encuesta"
            app:layout_constraintHorizontal_bias="0.501"/>

    <TextView
            android:text="@string/hora_llegada"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mensaje3" android:textStyle="bold"
            android:textAlignment="center" android:textSize="20sp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/total"
            app:layout_constraintStart_toStartOf="@+id/encuesta" app:layout_constraintEnd_toEndOf="@+id/encuesta"/>
    <TextView
            android:text="@string/hora_llegada"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/hora_llegada"
            android:textAlignment="center" android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/encuesta" app:layout_constraintEnd_toEndOf="@+id/encuesta"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintTop_toBottomOf="@+id/mensaje3"/>

    <View
            android:layout_width="312dp"
            android:layout_height="2dp"
            android:id="@+id/separator" android:background="@android:color/darker_gray"
            app:layout_constraintTop_toBottomOf="@+id/hora_llegada"
            app:layout_constraintStart_toStartOf="@+id/encuesta"
            app:layout_constraintEnd_toEndOf="@+id/encuesta" app:layout_constraintHorizontal_bias="0.558"
            android:layout_marginTop="16dp"/>

    <TextView
            android:text="@string/califique"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mensaje4" android:textStyle="bold"
            android:textAlignment="center" android:textSize="25sp"
            app:layout_constraintStart_toStartOf="@+id/encuesta" app:layout_constraintEnd_toEndOf="@+id/encuesta"
            app:layout_constraintTop_toBottomOf="@+id/separator" android:layout_marginTop="16dp"/>

    <ImageView
            android:layout_width="103dp"
            android:layout_height="96dp" tools:srcCompat="@tools:sample/avatars"
            android:id="@+id/foto_chofer"
            app:layout_constraintStart_toStartOf="@+id/encuesta" app:layout_constraintEnd_toEndOf="@+id/encuesta"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/mensaje4"
            app:layout_constraintHorizontal_bias="0.502"/>

    <TextView
            android:text="@string/nombre_chofer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nombre_chofer" app:layout_constraintEnd_toEndOf="@+id/encuesta"
            app:layout_constraintStart_toStartOf="@+id/encuesta" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/foto_chofer"
            android:textAlignment="center" android:textSize="20sp"/>

    <Button
            android:layout_width="30dp"
            android:layout_height="28dp"
            android:id="@+id/star1" android:background="@color/taxiYellow"
            app:layout_constraintEnd_toStartOf="@+id/star2" android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/star3" android:text="@string/estrella_1"
            android:textColor="@android:color/white"/>
    <Button
            android:layout_width="30dp"
            android:layout_height="28dp"
            android:id="@+id/star2" android:background="@color/taxiYellow"
            app:layout_constraintEnd_toStartOf="@+id/star3" android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/star3" android:text="@string/estrella_2"
            android:textColor="@android:color/white"/>
    <Button
            android:layout_width="30dp"
            android:layout_height="28dp"
            android:id="@+id/star3" android:background="@color/taxiYellow"
            app:layout_constraintEnd_toEndOf="@+id/encuesta" app:layout_constraintStart_toStartOf="@+id/encuesta"
            android:layout_marginBottom="16dp" app:layout_constraintBottom_toTopOf="@+id/saveSurvey"
            android:text="@string/estrella_3" android:textColor="@android:color/white"/>
    <Button
            android:layout_width="30dp"
            android:layout_height="28dp"
            android:id="@+id/star4" android:background="@color/taxiYellow"
            app:layout_constraintStart_toEndOf="@+id/star3" android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/star3" android:text="@string/estrella_4"
            android:textColor="@android:color/white"/>
    <Button
            android:layout_width="30dp"
            android:layout_height="28dp"
            android:id="@+id/star5" android:background="@color/taxiYellow"
            app:layout_constraintStart_toEndOf="@+id/star4" android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/star3" android:text="@string/estrella_5"
            android:textColor="@android:color/white"/>

    <Button
            android:text="@string/enviar"
            android:layout_width="315.52dp"
            android:layout_height="37dp"
            android:id="@+id/saveSurvey" android:background="@color/taxiYellow"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="@+id/encuesta" app:layout_constraintEnd_toEndOf="@+id/encuesta"
            android:layout_marginBottom="20dp" app:layout_constraintBottom_toBottomOf="@+id/encuesta"
            app:layout_constraintHorizontal_bias="0.516"/>

</android.support.constraint.ConstraintLayout>
