<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".billing.AddPaymentActivity">
    <TextView
            android:text="@string/card_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/title" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp" android:textSize="25sp"
            android:textColor="#151515"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
            app:layout_constraintVertical_chainStyle="spread_inside"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/constraintLayout"
            app:layout_constraintTop_toBottomOf="@+id/title"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="26dp" android:layout_marginEnd="26dp">
        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:id="@+id/cardNumber" android:layout_marginBottom="16dp"
                android:hint="@string/card_number" app:hintEnabled="true">

            <android.support.design.widget.TextInputEditText
                    android:id="@+id/cardNum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
            />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:id="@+id/expDate" android:layout_marginBottom="16dp"
                android:hint="@string/exp_date" app:hintEnabled="true">

            <android.support.design.widget.TextInputEditText
                    android:id="@+id/expDateText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:id="@+id/cvc" android:layout_marginBottom="16dp"
                app:hintEnabled="true" android:hint="@string/cvc">

            <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:id="@+id/phone" android:hint="@string/country">

            <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <Button
            android:text="@string/add_card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/button" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
            android:background="@drawable/rounded_button" android:backgroundTint="@color/taxiYellow"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" android:layout_marginBottom="32dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>