<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".auth.SignupActivity"
        android:theme="@style/Theme.AppCompat.Light.NoActionBar">

    <View
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:id="@+id/view"
            android:background="@color/taxiBlue"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp" app:srcCompat="@drawable/logo" android:id="@+id/signupLogoImg"
            app:layout_constraintBottom_toTopOf="@+id/signupTextCreaCuenta"
            android:layout_marginBottom="48dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="30dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" android:scaleType="centerCrop"
            android:contentDescription="@string/descLogo"/>
    <TextView
            android:text="@string/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/signupLogoText"
            android:textColor="@android:color/white"
            android:textSize="40sp" android:textStyle="bold"
            android:layout_marginTop="40dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/signupLogoImg" android:layout_marginStart="8dp"
            android:layout_marginEnd="30dp" app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/crea_cuenta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/signupTextCreaCuenta"
            android:textColor="@android:color/white"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:textSize="30sp" android:textStyle="bold"
            android:layout_marginTop="120dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.504"/>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf="@+id/view"
            android:layout_marginTop="180dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
    >
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view">
            <TextView
                    android:text="@string/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/signupTextName" android:layout_marginTop="14dp"
                    app:layout_constraintTop_toBottomOf="@+id/view" android:textColor="@android:color/black"
                    android:textSize="24sp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHorizontal_bias="0.498" android:textAlignment="center"/>
            <EditText
                    android:layout_width="275dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/signupInputName"
                    app:layout_constraintTop_toBottomOf="@+id/signupTextName" android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:hint="@string/name_hint"
                    android:textColor="@color/taxiBlue" android:textColorHint="@color/taxiBlue"
                    android:textAlignment="center"
                    android:backgroundTint="@color/taxiBlue"/>
            <TextView
                    android:text="@string/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/signupTextEmail" android:layout_marginTop="14dp"
                    app:layout_constraintTop_toBottomOf="@+id/signupInputName" android:textColor="@android:color/black"
                    android:textSize="24sp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHorizontal_bias="0.497" android:textAlignment="center"/>
            <EditText
                    android:layout_width="275dp"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:id="@+id/signupInputEmail"
                    app:layout_constraintTop_toBottomOf="@+id/signupTextEmail" android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:hint="@string/email_hint"
                    android:textColor="@color/taxiBlue" android:textColorHint="@color/taxiBlue"
                    android:textAlignment="center"
                    android:backgroundTint="@color/taxiBlue"/>
            <TextView
                    android:text="@string/phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/signupTextPhone"
                    android:textColor="@android:color/black"
                    android:textSize="24sp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHorizontal_bias="0.498" android:layout_marginTop="14dp"
                    app:layout_constraintTop_toBottomOf="@+id/signupInputEmail" android:textAlignment="center"/>
            <EditText
                    android:layout_width="275dp"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:ems="10"
                    android:id="@+id/signupInputPhone"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:hint="@string/phone_hint"
                    android:textColor="@color/taxiBlue" android:textColorHint="@color/taxiBlue"
                    android:textAlignment="center"
                    app:layout_constraintTop_toBottomOf="@+id/signupTextPhone"
                    android:backgroundTint="@color/taxiBlue"/>
            <TextView
                    android:text="@string/pass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/signupTextPass"
                    android:textColor="@android:color/black"
                    android:textSize="24sp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHorizontal_bias="0.498" android:layout_marginTop="14dp"
                    app:layout_constraintTop_toBottomOf="@+id/signupInputPhone" android:textAlignment="center"/>
            <EditText
                    android:layout_width="275dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/signupInputPass"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:hint="@string/pass_hint"
                    android:textColor="@color/taxiBlue" android:textColorHint="@color/taxiBlue"
                    android:textAlignment="center"
                    app:layout_constraintTop_toBottomOf="@+id/signupTextPass" android:backgroundTint="@color/taxiBlue"/>
            <Button
                    android:text="@string/registrarse"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/signupBtn" android:layout_marginTop="14dp"
                    app:layout_constraintTop_toBottomOf="@+id/signupInputPass" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" android:background="@drawable/rounded_button"
                    android:textColor="@android:color/white" android:textSize="26sp"
                    android:textAllCaps="false" android:backgroundTint="@color/taxiYellow"/>
            <TextView
                    android:text="@string/ya_tienes_cuenta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView7"
                    android:textAlignment="center" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                    android:layout_marginTop="14dp" app:layout_constraintTop_toBottomOf="@+id/signupBtn"
                    android:textColor="@android:color/black"/>
            <Button
                    android:text="@string/inicia_sesion"
                    android:layout_width="106dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/signupIniciaSesionBtn" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                    app:layout_constraintHorizontal_bias="0.498"
                    android:textColor="@color/taxiBlue" android:background="@android:color/transparent"
                    android:textAllCaps="false"
                    app:layout_constraintTop_toBottomOf="@+id/textView7" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"
                    android:textAlignment="center"/>
        </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>
