<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".auth.LoginActivity">

    <View
            android:layout_width="wrap_content"
            android:layout_height="180dp" android:id="@+id/view" tools:background="@color/taxiBlue"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp" app:srcCompat="@drawable/logo" android:id="@+id/loginLogoImg"
            app:layout_constraintBottom_toTopOf="@+id/loginTextIngresa" android:layout_marginBottom="48dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="30dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" android:scaleType="centerCrop"
            android:contentDescription="@string/descLogo"/>
    <TextView
            android:text="@string/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/loginLogoText"
            android:textColor="@android:color/white"
            android:textSize="40sp" android:textStyle="bold"
            android:layout_marginTop="40dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/loginLogoImg" android:layout_marginStart="8dp"
            android:layout_marginEnd="30dp" app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/ingresa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/loginTextIngresa"
            android:textColor="@android:color/white"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:textSize="30sp" android:textStyle="bold"
            android:layout_marginTop="120dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.504"/>
</android.support.constraint.ConstraintLayout>